# shusher

./: .gitattributes  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  babel.config.js  make_bundle.sh  my_server.py  next.config.js  package-lock.json  package.json  paper.bib  paper.md  tsconfig.json  usher_version.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  bundle.yml  cmake.yml  deploy.yml  deploy_heroku.yml  deploy_production.yml  main.yml  pull_usher.yml
components/: FileUploader.js  RunButton.js
components/auspice/: AuspiceFrame.js  TreeSidebar.js
pages/: _app.js  index.js
public/: index.html  parsimony.pb.cc  tools.js  usher.data  usher.js  usher.wasm.map  usher.worker.js
public/js/: after.js  before.js  parsimony.pb.h  tools.js  usher.js  usher.worker.js
scripts/: modify-auspice-server.js
src/: App.css  App.js  index.css  index.js
src/components/: AuspiceFrame.js  BackToUsher.js  DataInput.js  ErrorSnackbar.js  FileUploadCard.js  FileUploader.js  InfoTooltip.js  ProcessingFile.js  RunButton.js  Slider.js  SubtreeForm.js  SubtreeList.js  Tree.js  TreeForm.js  TreeSidebar.js  UsherFrame.js  UsherProgress.js  UsherResults.js
src/components/auspice/: AuspiceFrame.js  DynamicAuspiceFrame.js  Sidebar.js  Tree.js  showTree.js
src/data/: constants.js
src/pages/: App.js  AuspiceNavbar.js  _app.js  auspice-config.json  index.js
src/styles/: global.css  globals.css
src/tools/: constants.js  fastaToVcf.ts  nucleotideCodes.ts
src/tools/alignment/: alignAndSave.js  alignAndSave.ts  fastaToVcf.js  fastaToVcf.ts
src/tools/auspice/: showTree.js
src/tools/files/: fileHandling.js
styles/: globals.css
tools/: setOperations.ts
usher-port/: CMakeLists.txt  README.md  installUbuntuWeb.sh  test_parse.py
usher-port/src/: mutation_annotated_tree.cpp  mutation_annotated_tree.hpp  usher.cpp  usher_common.cpp  usher_graph.hpp  usher_mapper.cpp
usher-port/src/js/: prepend.js
usher-port/test/: global_assignments.pb
usher-port/test/preload/: filtered_6K.pb  test_samples.vcf
web-app/: README.md  package-lock.json  package.json
web-app/public/js/: after.js  before.js  usher.js  usher.worker.js
web-app/scripts/: install_bundle.sh  install_port.sh  pull_port.sh
web-app/src/components/: BackToUsher.js  ConfirmationDialog.js  ErrorSnackbar.js  FileUploadButton.js  InfoSection.js  InfoTooltip.js  ProcessingFile.js  RunButton.js  SubtreeButton.js  SubtreeForm.js  SubtreeList.js  TreeForm.js  Troubleshooting.js  UsherFrame.js  UsherProgress.js  UsherResults.js
web-app/src/data/: constants.js
web-app/src/pages/: App.js  AuspiceNavbar.js  auspice-config.json
web-app/src/styles/: global.css
web-app/src/tools/alignment/: alignAndSave.js  fastaToVcf.js
web-app/src/tools/auspice/: showTree.js
web-app/src/tools/files/: fileHandling.js
web-app/tmp_usher_port/: usher.data  usher.js  usher.wasm  usher.worker.js
